--- a/cdn/fonts/comic-neue/comic-neue.css
+++ b/cdn/fonts/comic-neue/comic-neue.css
@@ -1,125 +1,125 @@
 @font-face {
   font-family: 'Comic Neue';
-  src: url('../fonts/ComicNeue-Light.eot');
-  src: url('../fonts/ComicNeue-Light.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Light.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Light.woff') format('woff'),
-       url('../fonts/ComicNeue-Light.ttf')  format('truetype');
+  src: url('ComicNeue-Light.eot');
+  src: url('ComicNeue-Light.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Light.woff2') format('woff2'),
+       url('ComicNeue-Light.woff') format('woff'),
+       url('ComicNeue-Light.ttf')  format('truetype');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Comic Neue';
-  src: url('../fonts/ComicNeue-Light-Oblique.eot');
-  src: url('../fonts/ComicNeue-Light-Oblique.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Light-Oblique.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Light-Oblique.woff') format('woff'),
-       url('../fonts/ComicNeue-Light-Oblique.ttf')  format('truetype');
+  src: url('ComicNeue-Light-Oblique.eot');
+  src: url('ComicNeue-Light-Oblique.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Light-Oblique.woff2') format('woff2'),
+       url('ComicNeue-Light-Oblique.woff') format('woff'),
+       url('ComicNeue-Light-Oblique.ttf')  format('truetype');
   font-weight: 300;
   font-style: oblique;
 }
 
 @font-face {
   font-family: 'Comic Neue';
-  src: url('../fonts/ComicNeue-Regular.eot');
-  src: url('../fonts/ComicNeue-Regular.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Regular.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Regular.woff') format('woff'),
-       url('../fonts/ComicNeue-Regular.ttf')  format('truetype');
+  src: url('ComicNeue-Regular.eot');
+  src: url('ComicNeue-Regular.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Regular.woff2') format('woff2'),
+       url('ComicNeue-Regular.woff') format('woff'),
+       url('ComicNeue-Regular.ttf')  format('truetype');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Comic Neue';
-  src: url('../fonts/ComicNeue-Regular-Oblique.eot');
-  src: url('../fonts/ComicNeue-Regular-Oblique.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Regular-Oblique.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Regular-Oblique.woff') format('woff'),
-       url('../fonts/ComicNeue-Regular-Oblique.ttf')  format('truetype');
+  src: url('ComicNeue-Regular-Oblique.eot');
+  src: url('ComicNeue-Regular-Oblique.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Regular-Oblique.woff2') format('woff2'),
+       url('ComicNeue-Regular-Oblique.woff') format('woff'),
+       url('ComicNeue-Regular-Oblique.ttf')  format('truetype');
   font-weight: 400;
   font-style: oblique;
 }
 
 @font-face {
   font-family: 'Comic Neue';
-  src: url('../fonts/ComicNeue-Bold.eot');
-  src: url('../fonts/ComicNeue-Bold.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Bold.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Bold.woff') format('woff'),
-       url('../fonts/ComicNeue-Bold.ttf')  format('truetype');
+  src: url('ComicNeue-Bold.eot');
+  src: url('ComicNeue-Bold.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Bold.woff2') format('woff2'),
+       url('ComicNeue-Bold.woff') format('woff'),
+       url('ComicNeue-Bold.ttf')  format('truetype');
   font-weight: 700;
 }
 
 @font-face {
   font-family: 'Comic Neue';
-  src: url('../fonts/ComicNeue-Bold-Oblique.eot');
-  src: url('../fonts/ComicNeue-Bold-Oblique.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Bold-Oblique.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Bold-Oblique.woff') format('woff'),
-       url('../fonts/ComicNeue-Bold-Oblique.ttf')  format('truetype');
+  src: url('ComicNeue-Bold-Oblique.eot');
+  src: url('ComicNeue-Bold-Oblique.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Bold-Oblique.woff2') format('woff2'),
+       url('ComicNeue-Bold-Oblique.woff') format('woff'),
+       url('ComicNeue-Bold-Oblique.ttf')  format('truetype');
   font-weight: 700;
   font-style: oblique;
 }
 
 @font-face {
   font-family: 'Comic Neue Angular';
-  src: url('../fonts/ComicNeue-Angular-Light.eot');
-  src: url('../fonts/ComicNeue-Angular-Light.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Angular-Light.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Angular-Light.woff') format('woff'),
-       url('../fonts/ComicNeue-Angular-Light.ttf')  format('truetype');
+  src: url('ComicNeue-Angular-Light.eot');
+  src: url('ComicNeue-Angular-Light.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Angular-Light.woff2') format('woff2'),
+       url('ComicNeue-Angular-Light.woff') format('woff'),
+       url('ComicNeue-Angular-Light.ttf')  format('truetype');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Comic Neue Angular';
-  src: url('../fonts/ComicNeue-Angular-Light-Oblique.eot');
-  src: url('../fonts/ComicNeue-Angular-Light-Oblique.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Angular-Light-Oblique.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Angular-Light-Oblique.woff') format('woff'),
-       url('../fonts/ComicNeue-Angular-Light-Oblique.ttf')  format('truetype');
+  src: url('ComicNeue-Angular-Light-Oblique.eot');
+  src: url('ComicNeue-Angular-Light-Oblique.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Angular-Light-Oblique.woff2') format('woff2'),
+       url('ComicNeue-Angular-Light-Oblique.woff') format('woff'),
+       url('ComicNeue-Angular-Light-Oblique.ttf')  format('truetype');
   font-weight: 300;
   font-style: oblique;
 }
 
 @font-face {
   font-family: 'Comic Neue Angular';
-  src: url('../fonts/ComicNeue-Angular-Regular.eot');
-  src: url('../fonts/ComicNeue-Angular-Regular.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Angular-Regular.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Angular-Regular.woff') format('woff'),
-       url('../fonts/ComicNeue-Angular-Regular.ttf')  format('truetype');
+  src: url('ComicNeue-Angular-Regular.eot');
+  src: url('ComicNeue-Angular-Regular.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Angular-Regular.woff2') format('woff2'),
+       url('ComicNeue-Angular-Regular.woff') format('woff'),
+       url('ComicNeue-Angular-Regular.ttf')  format('truetype');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Comic Neue Angular';
-  src: url('../fonts/ComicNeue-Angular-Regular-Oblique.eot');
-  src: url('../fonts/ComicNeue-Angular-Regular-Oblique.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Angular-Regular-Oblique.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Angular-Regular-Oblique.woff') format('woff'),
-       url('../fonts/ComicNeue-Angular-Regular-Oblique.ttf')  format('truetype');
+  src: url('ComicNeue-Angular-Regular-Oblique.eot');
+  src: url('ComicNeue-Angular-Regular-Oblique.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Angular-Regular-Oblique.woff2') format('woff2'),
+       url('ComicNeue-Angular-Regular-Oblique.woff') format('woff'),
+       url('ComicNeue-Angular-Regular-Oblique.ttf')  format('truetype');
   font-weight: 400;
   font-style: oblique;
 }
 
 @font-face {
   font-family: 'Comic Neue Angular';
-  src: url('../fonts/ComicNeue-Angular-Bold.eot');
-  src: url('../fonts/ComicNeue-Angular-Bold.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Angular-Bold.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Angular-Bold.woff') format('woff'),
-       url('../fonts/ComicNeue-Angular-Bold.ttf')  format('truetype');
+  src: url('ComicNeue-Angular-Bold.eot');
+  src: url('ComicNeue-Angular-Bold.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Angular-Bold.woff2') format('woff2'),
+       url('ComicNeue-Angular-Bold.woff') format('woff'),
+       url('ComicNeue-Angular-Bold.ttf')  format('truetype');
   font-weight: 700;
 }
 
 @font-face {
   font-family: 'Comic Neue Angular';
-  src: url('../fonts/ComicNeue-Angular-Bold-Oblique.eot');
-  src: url('../fonts/ComicNeue-Angular-Bold-Oblique.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/ComicNeue-Angular-Bold-Oblique.woff2') format('woff2'),
-       url('../fonts/ComicNeue-Angular-Bold-Oblique.woff') format('woff'),
-       url('../fonts/ComicNeue-Angular-Bold-Oblique.ttf')  format('truetype');
+  src: url('ComicNeue-Angular-Bold-Oblique.eot');
+  src: url('ComicNeue-Angular-Bold-Oblique.eot?#iefix') format('embedded-opentype'),
+       url('ComicNeue-Angular-Bold-Oblique.woff2') format('woff2'),
+       url('ComicNeue-Angular-Bold-Oblique.woff') format('woff'),
+       url('ComicNeue-Angular-Bold-Oblique.ttf')  format('truetype');
   font-weight: 700;
   font-style: oblique;
 }
